--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.181.82;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -5,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -341,18 +341,7 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
-allow 185.220.101.100;
-allow 185.220.101.101;
-allow 185.220.101.102;
-allow 185.220.101.103;
-allow 185.220.101.104;
-allow 185.220.101.105;
-allow 185.220.101.106;
-allow 185.220.101.107;
-allow 185.220.101.108;
-allow 185.220.101.109;
 allow 185.220.101.11;
-allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.128;
 allow 185.220.101.13;
@@ -498,10 +487,6 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
-allow 185.220.101.96;
-allow 185.220.101.97;
-allow 185.220.101.98;
-allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -730,6 +715,7 @@ allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
 allow 2001:41d0:a:5c0::1;
+allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -1098,7 +1084,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e02::f03c:94ff:fe88:6fd4;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
@@ -1379,21 +1364,6 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
-allow 2a0b:f4c2:4::100;
-allow 2a0b:f4c2:4::101;
-allow 2a0b:f4c2:4::102;
-allow 2a0b:f4c2:4::103;
-allow 2a0b:f4c2:4::104;
-allow 2a0b:f4c2:4::105;
-allow 2a0b:f4c2:4::106;
-allow 2a0b:f4c2:4::107;
-allow 2a0b:f4c2:4::108;
-allow 2a0b:f4c2:4::109;
-allow 2a0b:f4c2:4::110;
-allow 2a0b:f4c2:4::96;
-allow 2a0b:f4c2:4::97;
-allow 2a0b:f4c2:4::98;
-allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1468,7 +1438,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.218.120.195;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1547,7 +1516,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1573,6 +1541,7 @@ allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
+allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1627,6 +1596,7 @@ allow 66.78.40.147;
 allow 66.78.40.160;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 71.19.144.222;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.253.202.121;
