--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,3 +1,4 @@
+deny 100.28.181.82;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 103.109.101.105;
@@ -5,7 +6,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -341,18 +341,7 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
-deny 185.220.101.100;
-deny 185.220.101.101;
-deny 185.220.101.102;
-deny 185.220.101.103;
-deny 185.220.101.104;
-deny 185.220.101.105;
-deny 185.220.101.106;
-deny 185.220.101.107;
-deny 185.220.101.108;
-deny 185.220.101.109;
 deny 185.220.101.11;
-deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.128;
 deny 185.220.101.13;
@@ -498,10 +487,6 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
-deny 185.220.101.96;
-deny 185.220.101.97;
-deny 185.220.101.98;
-deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -730,6 +715,7 @@ deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:5c0::1;
+deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -1098,7 +1084,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e02::f03c:94ff:fe88:6fd4;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
@@ -1379,21 +1364,6 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
-deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1468,7 +1438,6 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
-deny 44.218.120.195;
 deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
@@ -1547,7 +1516,6 @@ deny 45.95.169.230;
 deny 45.95.169.255;
 deny 45.95.202.48;
 deny 46.165.243.36;
-deny 46.182.21.248;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1573,6 +1541,7 @@ deny 5.182.86.212;
 deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
+deny 5.196.95.34;
 deny 5.255.100.126;
 deny 5.255.100.219;
 deny 5.255.100.26;
@@ -1627,6 +1596,7 @@ deny 66.78.40.147;
 deny 66.78.40.160;
 deny 67.219.109.141;
 deny 71.19.144.106;
+deny 71.19.144.222;
 deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.253.202.121;
