--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -17,6 +17,7 @@ deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:5c0::1;
+deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -279,7 +280,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e02::f03c:94ff:fe88:6fd4;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
@@ -560,21 +560,6 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
-deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
