--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -369,6 +369,7 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a04:9dc0:31::c0cc:73;
 allow 2a04:9dc0:31::c0cc:78;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
