--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -630,3 +630,4 @@ allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
+allow 2a12:d8c0:109a:9001::7;
