--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -630,3 +630,4 @@ deny 2a12:5940:f0a8::2;
 deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
+deny 2a12:d8c0:109a:9001::7;
