--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -630,3 +630,4 @@ set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
+set_real_ip_from 2a12:d8c0:109a:9001::7;
