--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -116,6 +115,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -131,6 +131,7 @@ allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.98.11.62;
 allow 141.98.119.106;
+allow 142.44.133.81;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 144.172.118.4;
@@ -174,7 +175,6 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
-allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
 allow 171.25.193.20;
@@ -804,6 +804,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -1039,7 +1040,6 @@ allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
-allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:4181::1;
@@ -1391,6 +1391,7 @@ allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
+allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
 allow 2a0f:85c1:356:578f::1;
@@ -1450,6 +1451,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.204.32.204;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1491,7 +1493,6 @@ allow 45.15.157.177;
 allow 45.33.20.42;
 allow 45.61.185.172;
 allow 45.61.186.203;
-allow 45.61.187.200;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -1545,7 +1546,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.3.184.109;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1620,6 +1620,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.85.147;
 allow 77.91.86.95;
+allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.102.37.209;
 allow 79.124.8.241;
@@ -1631,7 +1632,6 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
-allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.182;
 allow 82.153.138.24;
